fix space cover stretched in mobile view

--- a/themes/Coinsence/less/panel.less
+++ b/themes/Coinsence/less/panel.less
@@ -1,3 +1,7 @@
+// main: ./build.less
+//
+// Panel
+// --------------------------------------------------
 .panel {
     border: none;
     background-color: @background-color-main;
@@ -117,6 +121,8 @@
             border-top-left-radius: 4px;
             border-top-right-radius: 4px;
             min-height: 200px;
+            object-fit: cover;
+            object-position: center;
         }
         .img-profile-data {
             position: absolute;
